Took Tip Calc out of folder

--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome to my placeholder page! </h1>
 
-    <a href="tipcalc.htm">Tip Calculator</a>
+    <p><a href="tipcalc.htm">Tip Calculator</a><p>
 </body>
 
 </html>
