Add Debugging and Weatherly

--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,9 @@
     <h1>Welcome to my placeholder page! </h1>
 
     <p><a href="tipcalc.htm">Tip Calculator</a><p>
+    <p><a href="FixMe.htm">Debugging Challenge</a><p>
+    <p><a href="Weatherly3.htm">Weatherly</a><p>
+        
 </body>
 
 </html>
