--- a/index.htm
+++ b/index.htm
@@ -1,316 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Shea Maynard</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
-        rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic'
-        rel='stylesheet' type='text/css'>
-
-    <!-- Plugin CSS -->
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-
-    <!-- Theme CSS -->
-    <link href="css/creative.min.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+    <title> My Page
+    </title>
 </head>
 
-<body id="page-top">
+<body>
+    <h1>Welcome to my placeholder page! </h1>
 
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Portfolio</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#giftit">Gift.it</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Projects</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-
-    <header>
-        <div class="header-content">
-            <div class="header-content-inner">
-                <img src="img/portfolio/fullsize/SamanthaMaynardBW500R.png" alt="">
-                <h1 id="homeHeading">Shea Maynard</h1>
-                <hr>
-                <h2>UX Designer and Android Developer</h2>
-                <br>
-                <br>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">About Me</a>
-            </div>
-        </div>
-    </header>
-
-    <section class="bg-primary" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Hello! I am Shea.</h2>
-                    <hr class="light">
-                    <p class="text-faded">I began my coding journey in September 2016 as a part of the TEKY program in Paintsville, KY. In that
-                        program I gained experience developing in HTML5, CSS3, JavaScript, and Android Java. Following that
-                        I worked as an intern for <a href="http://www.interapt.com" style="color:white">Interapt</a>, where
-                        I learned UX design skills with my focus being information architechture. I am excited to learn more!
-                        <br> <br> I am currently looking for employment as a junior developer or UX designer.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="giftit">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Gift.it is a project I worked on as an intern for Interapt.</h2>
-                    <h4>I worked on the beta version as a developer, and we were focused on just making a functional application.
-                        Then, when we decided to make it a production level app, I worked on it as a designer. It is astouding
-                        the changes that design can make!</h4>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-                <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="img/portfolio/fullsize/giftitbeta_1.jpg" alt="Beta">
-                    <div class="project-name">
-                       <h1 style="text-align:center">Beta</h1>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="img/portfolio/fullsize/giftitv1_1.jpg" alt="Version 1">
-                    <div class="project-name">
-                        <h1 style="text-align:center">Version 1</h1>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="img/portfolio/fullsize/giftitbeta_2.jpg" alt="Beta">
-                    <div class="project-name">
-                        <h1 style="text-align:center">Beta</h1>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="img/portfolio/fullsize/giftitv1_2.jpg" alt="Version 1">
-                    <div class="project-name">
-                        <h1 style="text-align:center">Version 1</h1>
-                    </div>
-                </div>
-
-                     <div class="item">
-                    <img src="img/portfolio/fullsize/giftitbeta_3.jpg" alt="Beta">
-                    <div class="project-name">
-                        <h1 style="text-align:center">Beta</h1>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="img/portfolio/fullsize/giftitv1_3.jpg" alt="Version 1">
-                    <div class="project-name">
-                        <h1 style="text-align:center">Version 1</h1>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </section>
-
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="maply.htm" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/maply.jpg" class="img-responsive" alt="Maply">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Web Application
-                                </div>
-                                <div class="project-name">
-                                    Maply
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="tipcalc.htm" class="portfolio-box">
-                        <img src="img/portfolio/fullsize/tipcalculator.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Web Application
-                                </div>
-                                <div class="project-name">
-                                    Tip Calculator
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="weatherly3.htm" class="portfolio-box">
-                        <img src="img/portfolio/fullsize/weatherly.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Web Application
-                                </div>
-                                <div class="project-name">
-                                    Weather Meow
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/peoplegatchi.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/peoplegatchi.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Android Application
-                                </div>
-                                <div class="project-name">
-                                    Peoplegatchimon
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/budget.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/budget.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Android Application
-                                </div>
-                                <div class="project-name">
-                                    Budget
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/todoapp.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/todoapp.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Android Application
-                                </div>
-                                <div class="project-name">
-                                    To Do List
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
-                    <hr class="primary">
-                    <p>Please feel free to contact me!</p>
-                </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>606-263-4259</p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:samantha.maynard@interapthq.com">Send me an email</a></p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-
-    <!-- Theme JavaScript -->
-    <script src="js/creative.min.js"></script>
-
+    <p><a href="tipcalc.htm">Tip Calculator</a><p>
+    <p><a href="FixMe.htm">Debugging Challenge</a><p>
+    <p><a href="Weatherly3.htm">Weatherly</a><p>
+        
 </body>
 
 </html>
