--- a/index.htm
+++ b/index.htm
@@ -182,7 +182,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="maply.htm" class="portfolio-box">
+                    <a href="Maply.htm" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/maply.jpg" class="img-responsive" alt="Maply">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -212,7 +212,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="weatherly3.htm" class="portfolio-box">
+                    <a href="Weatherly3.htm" class="portfolio-box">
                         <img src="img/portfolio/fullsize/weatherly.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -291,7 +291,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:samantha.maynard@interapthq.com">Send me an email</a></p>
+                    <p><a href="mailto:weirdalgurl27@gmail.com">Send me an email</a></p>
                 </div>
             </div>
         </div>
