new giftit beta size

--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#giftit">Gift.it</a>
+                        <a class="page-scroll" href="#giftit">Gift.it</a>=
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Projects</a>
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Hello! I am Shea.</h2>
+                    <h2 class="section-heading">About Me</h2>
                     <hr class="light">
                     <p class="text-faded">I began my coding journey in September 2016 as a part of the TEKY program in Paintsville, KY. In that
                         program I gained experience developing in HTML5, CSS3, JavaScript, and Android Java. Following that
@@ -104,8 +104,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Gift.it is a project I worked on as an intern for Interapt.</h2>
-                    <h4>I worked on the beta version as a developer, and we were focused on just making a functional application.
+                    <h2 class="section-heading">Gift.it</h2>
+                    <h4>Gift.it is a project I worked on as an intern for Interapt. I worked on the beta version as a developer, and we were focused on just making a functional application.
                         Then, when we decided to make it a production level app, I worked on it as a designer. It is astouding
                         the changes that design can make!</h4>
                     <hr class="primary">
@@ -115,7 +115,7 @@
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li style= ""data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
                 <li data-target="#myCarousel" data-slide-to="3"></li>
@@ -283,7 +283,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Please feel free to contact me!</p>
+                    <p>Looking forward to hearing from you!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
