--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#giftit">Gift.it</a>=
+                        <a class="page-scroll" href="#giftit">Gift.it</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Projects</a>
