updating my portfolio

--- a/index.htm
+++ b/index.htm
@@ -93,7 +93,7 @@
                     <p class="text-faded">I began my coding journey in September 2016 as a part of the TEKY program in Paintsville, KY. In that
                         program I gained experience developing in HTML5, CSS3, JavaScript, and Android Java. Following that
                         I worked as an intern for <a href="http://www.interapt.com" style="color:white">Interapt</a>, where
-                        I learned UX design skills with my focus being information architechture. I am excited to learn more!
+                        I learned UX design skills with my focus being information architechture. I gained experience with Sketch, Balsamiq, and Zeplin.  I am excited to learn more!
                         <br> <br> I am currently looking for employment as a junior developer or UX designer.</p>
                 </div>
             </div>
@@ -106,62 +106,68 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Gift.it</h2>
                     <h4>Gift.it is a project I worked on as an intern for Interapt. I worked on the beta version as a developer, and we were focused on just making a functional application.
-                        Then, when we decided to make it a production level app, I worked on it as a designer. It is astouding
-                        the changes that design can make!</h4>
+                        Then, when we decided to make it a production level app, I worked on it as a designer. It is astounding
+                        the changes that design can make, just take a look at the comparisons below.</h4>
                     <hr class="primary">
                 </div>
             </div>
         </div>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
-            <ol class="carousel-indicators">
+            <!--<ol class="carousel-indicators">
                 <li style= ""data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
                 <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
+            </ol>-->
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="img/portfolio/fullsize/giftitbeta_1.jpg" alt="Beta">
+                    <img src="img/portfolio/fullsize/giftit_comparison_1.jpg" alt="Need View Comparison">
                     <div class="project-name">
-                       <h1 style="text-align:center">Beta</h1>
                     </div>
                 </div>
 
                 <div class="item">
-                    <img src="img/portfolio/fullsize/giftitv1_1.jpg" alt="Version 1">
+                    <img src="img/portfolio/fullsize/giftit_comparison_2.jpg" alt="Join Org Comparison">
                     <div class="project-name">
-                        <h1 style="text-align:center">Version 1</h1>
                     </div>
                 </div>
 
                 <div class="item">
-                    <img src="img/portfolio/fullsize/giftitbeta_2.jpg" alt="Beta">
+                    <img src="img/portfolio/fullsize/giftit_comparison_3.jpg" alt="Need Detail Comparison">
                     <div class="project-name">
-                        <h1 style="text-align:center">Beta</h1>
                     </div>
                 </div>
 
                 <div class="item">
-                    <img src="img/portfolio/fullsize/giftitv1_2.jpg" alt="Version 1">
+                    <img src="img/portfolio/fullsize/giftit_comparison_4.jpg" alt="Profile Comparison">
                     <div class="project-name">
-                        <h1 style="text-align:center">Version 1</h1>
                     </div>
                 </div>
 
                      <div class="item">
-                    <img src="img/portfolio/fullsize/giftitbeta_3.jpg" alt="Beta">
+                    <img src="img/portfolio/fullsize/giftit_comparison_5.jpg" alt="Organization Profile Comparison">
                     <div class="project-name">
-                        <h1 style="text-align:center">Beta</h1>
                     </div>
                 </div>
 
                 <div class="item">
-                    <img src="img/portfolio/fullsize/giftitv1_3.jpg" alt="Version 1">
+                    <img src="img/portfolio/fullsize/giftit_comparison_6.jpg" alt="Organization Members Comparison">
                     <div class="project-name">
-                        <h1 style="text-align:center">Version 1</h1>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="img/portfolio/fullsize/giftit_comparison_7.jpg" alt="Contribute Comparison">
+                    <div class="project-name">
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="img/portfolio/fullsize/giftit_comparison_8.jpg" alt="View Contributors Comparison">
+                    <div class="project-name">
                     </div>
                 </div>
             </div>
