--- a/index.htm
+++ b/index.htm
@@ -63,6 +63,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a href="SheaMaynardResume.pdf">Resume</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -72,7 +75,7 @@
 
     <header>
         <div class="header-content">
-            <div class="header-content-inner">
+            <div class="header-content-inner" style="margin-top:60px">
                 <img src="img/portfolio/fullsize/SamanthaMaynardBW500R.png" alt="">
                 <h1 id="homeHeading">Shea Maynard</h1>
                 <hr>
@@ -93,7 +96,7 @@
                     <p class="text-faded">I began my coding journey in September 2016 as a part of the TEKY program in Paintsville, KY. In that
                         program I gained experience developing in HTML5, CSS3, JavaScript, and Android Java. Following that
                         I worked as an intern for <a href="http://www.interapt.com" style="color:white">Interapt</a>, where
-                        I learned UX design skills with my focus being information architechture. I gained experience with Sketch, Balsamiq, and Zeplin.  I am excited to learn more!
+                        I learned UX design skills with my focus being information architechture. I gained experience with Sketch, Zeplin, Balsamiq, and InVision.  I am excited to learn more!
                         <br> <br> I am currently looking for employment as a junior developer or UX designer.</p>
                 </div>
             </div>
@@ -106,8 +109,8 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Gift.it</h2>
                     <h4>Gift.it is a project I worked on as an intern for Interapt. I worked on the beta version as a developer, and we were focused on just making a functional application.
-                        Then, when we decided to make it a production level app, I worked on it as a designer. It is astounding
-                        the changes that design can make, just take a look at the comparisons below.</h4>
+                        After deciding to make it a production level app, I worked on it as a designer. I created personas and a site map, and used them to completely redesign the application.  It is astounding
+                        the changes that design can make, as you can see in the comparisons below.</h4>
                     <hr class="primary">
                 </div>
             </div>
@@ -293,7 +296,7 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>606-263-4259</p>
+                    <p>(502) 625-5415</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
