minor text fixes

--- a/index.htm
+++ b/index.htm
@@ -108,9 +108,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Gift.it</h2>
-                    <h4>Gift.it is a project I worked on as an intern for Interapt. I worked on the beta version as a developer, and we were focused on just making a functional application.
+                    <p class="text-faded-dark">Gift.it is a project I worked on as an intern for Interapt. I worked on the beta version as a developer, and we were focused on just making a functional application.
                         After deciding to make it a production level app, I worked on it as a designer. I created personas and a site map, and used them to completely redesign the application.  It is astounding
-                        the changes that design can make, as you can see in the comparisons below.</h4>
+                        the changes that design can make, as you can see in the comparisons below.</p>
                     <hr class="primary">
                 </div>
             </div>
