updates to resume

--- a/index.htm
+++ b/index.htm
@@ -55,10 +55,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#giftit">Gift.it</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Projects</a>
+                        <a class="page-scroll" href="#projects">Projects</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -93,25 +90,31 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About Me</h2>
                     <hr class="light">
-                    <p class="text-faded">I began my coding journey in September 2016 as a part of the TEKY program in Paintsville, KY. In that
-                        program I gained experience developing in HTML5, CSS3, JavaScript, and Android Java. Following that
-                        I worked as an intern for <a href="http://www.interapt.com" style="color:white">Interapt</a>, where
-                        I learned UX design skills with my focus being information architechture. I gained experience with Sketch, Zeplin, Balsamiq, and InVision.  I am excited to learn more!
+                    <p class="text-faded">I graduated from the TEKY training program in Paintsville, KY in January 2017. In that program I gained
+                        experience developing in HTML5, CSS3, JavaScript, and Android Java. Following that I worked as an
+                        intern for <a href="http://www.interapt.com" style="color:white">Interapt</a>, where I learned UX
+                        design skills with my focus being information architechture. I gained experience with Sketch, Zeplin,
+                        Balsamiq, and InVision. I am excited to learn more!
                         <br> <br> I am currently looking for employment as a junior developer or UX designer.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="giftit">
+    <section id="projects">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Gift.it</h2>
-                    <p class="text-faded-dark">Gift.it is a project I worked on as an intern for Interapt. I worked on the beta version as a developer, and we were focused on just making a functional application.
-                        After deciding to make it a production level app, I worked on it as a designer. I created personas and a site map, and used them to completely redesign the application.  It is astounding
-                        the changes that design can make, as you can see in the comparisons below.</p>
                     <hr class="primary">
+                    <p class="text-faded-dark">Gift.it is the biggest project I worked on for Interapt. It is an application that allows any group to
+                        manage charitable transactions within a closed system. Groups can provide assistance through Gift.it
+                        as a member to member donation system overseen by a managing body. Individuals can be anonymous or
+                        have their name associated with needs and donations. In essence Gift.it is a rapidly deployable mobile
+                        charity management system with the ability to be rebranded and published with minimum cost to organizations.
+                        On top of coding, I was the lead UX designer for this project. I created personas and a site map,
+                        and used them to completely redesign the application. It is astounding the changes that design can
+                        make, as you can see in the comparisons below.</p>
                 </div>
             </div>
         </div>
@@ -150,7 +153,7 @@
                     </div>
                 </div>
 
-                     <div class="item">
+                <div class="item">
                     <img src="img/portfolio/fullsize/giftit_comparison_5.jpg" alt="Organization Profile Comparison">
                     <div class="project-name">
                     </div>
@@ -201,6 +204,8 @@
                                 <div class="project-name">
                                     Maply
                                 </div>
+                                </br>
+                                Displays maps in separate card displays for locations input into a search bar.
                             </div>
                         </div>
                     </a>
@@ -216,6 +221,8 @@
                                 <div class="project-name">
                                     Tip Calculator
                                 </div>
+                                </br>
+                                A convenient way to determine and split the bill when you go out to dinner.
                             </div>
                         </div>
                     </a>
@@ -231,6 +238,8 @@
                                 <div class="project-name">
                                     Weather Meow
                                 </div>
+                                </br>
+                                Displays the weather (with an adorable cat theme) in separate card displays for locations input in the search bar.
                             </div>
                         </div>
                     </a>
@@ -246,6 +255,9 @@
                                 <div class="project-name">
                                     Peoplegatchimon
                                 </div>
+                                </br>
+                                A game where you take care of a human character by making sure their needs are met. The character can also get an education
+                                and get a job.
                             </div>
                         </div>
                     </a>
@@ -261,6 +273,8 @@
                                 <div class="project-name">
                                     Budget
                                 </div>
+                                </br>
+                                A great way to keep track of your monthly, or weekly, finances.
                             </div>
                         </div>
                     </a>
@@ -276,6 +290,8 @@
                                 <div class="project-name">
                                     To Do List
                                 </div>
+                                </br>
+                                Keep track of all the things you have to get done with this great application!
                             </div>
                         </div>
                     </a>
@@ -300,7 +316,8 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:weirdalgurl27@gmail.com">Send me an email</a></p>
+                    <p><a style="color:black" href="mailto:weirdalgurl27@gmail.com" onMouseOver="this.style.color='#F05F40'"
+                            onMouseOut="this.style.color='#000000'">Send me an email</a></p>
                 </div>
             </div>
         </div>
